# bintovec

./: .gitignore  CMakeLists.txt  README.md  bintovec.cpp
